# fouria

./: .gitignore  BUILD_EXE.bat  Modelfile  README.md  Start-FOURIA.ps1  fouria_app.py  pyproject.toml  studio_automation.py
.github/workflows/: ci.yml
Documents/Codex/2026-06-22/files-mentioned-by-the-user-eldrae/fouria/: .gitignore  DEPLOY_BRIDGE.ps1  Install-FOURIA.ps1  Launch-FL-With-FOURIA.ps1  README.md  START_FOURIA.bat  Start-FOURIA-Background.ps1  fouria.ps1  fouria_avatar.py  fouria_chat.py  studio_automation.py
Documents/Codex/2026-06-22/files-mentioned-by-the-user-eldrae/fouria/fl_bridge/: device_fouria.py
Documents/Codex/2026-06-22/files-mentioned-by-the-user-eldrae/fouria/piano_roll_engine/: CMakeLists.txt  README.md  build.bat  virtual_midi.cpp
Documents/Codex/2026-06-22/files-mentioned-by-the-user-eldrae/fouria/scripts/: Watch-FL-FOURIA.ps1  train_lora.py
Documents/Codex/2026-06-22/files-mentioned-by-the-user-eldrae/fouria/server/: action_store.py  audio_tools.py  capabilities.py  context_injector.py  fouria_api.py  midi_output.py  midi_tools.py  model_client.py  orchestrator.py  persona.py  production_agent.py  rag.py
data/: youtube_sources.txt
data/corpus/: fouria_production_encyclopedia.md
fl_bridge/: device_fouria.py
scripts/: build_dataset.py  ingest_folder.py  ingest_youtube.py
server/: action_store.py  audio_tools.py  desktop_executor.py  fouria_api.py  library_index.py  model_client.py  production_agent.py  rag.py
tests/: test_bridge_snapshot.py  test_desktop_executor.py
ui/: index.html
(+24 files in other folders)
