[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fouria"
version = "0.2.0"
description = "Local-first FL Studio production control system with structured approval and safety guarantees"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LMMinier" }]
keywords = ["fl-studio", "music-production", "ai", "midi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

# The server has no hard PyPI dependencies — it uses only stdlib.
# Optional extras for development.
[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fouria = "fouria_api:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
